Fix browser frame layout logic.

It was erroneously adding the minimum width of the top handle and
rest of the Chrome window rather than using the maximum of the two,
plus frame size.

Bug: 915402
Change-Id: Iee380c7f676ce320318940b3e96800139c669763
Reviewed-on: https://chromium-review.googlesource.com/c/1379246
Commit-Queue: Dana Fried <dfried@chromium.org>
Reviewed-by: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617287}
Former-commit-id: 55cde65e3afa4950421e0c8e993118aaec6a2b5f